--- a/src/blocks/page/page.css
+++ b/src/blocks/page/page.css
@@ -1,6 +1,6 @@
 .page {
-  /* max-width: 1280px; */
   margin: 0 auto;
+  min-height: 100vh;
   font-family: 'Inter', 'Arial', sans-serif;
   background-color: #000000;
 }
